website/i18n/zh-CN/docusaurus-plugin-content-docs/version-3.3.2/guides/markdown-features/markdown-features-intro.mdx
---
id: introduction
description: Docusaurus uses MDX. Find out more about Docusaurus-specific features when writing Markdown.
slug: /markdown-features
---

# Markdown 功能

import BrowserWindow from '@site/src/components/BrowserWindow';

Docusaurus 采用 **[Markdown](https://commonmark.org/)** 作为主要的内容创作格式。

:::tip[学习 Markdown]

你可以通过[10分钟学会 Markdown](https://commonmark.org/help/)快速入门。

:::

Docusaurus 使用现代化工具链帮助你创建**交互式文档**。

**[MDX](https://mdxjs.com/)** 编译器会将 **Markdown 文件转换为 React 组件**，并允许在 Markdown 内容中使用 JSX。这使你能轻松地在内容中嵌入 React 组件，打造出色的学习体验。

:::tip[使用 MDX 演练场]

**[MDX 演练场](https://mdxjs.com/playground/)** 是你最好的调试伙伴！

这个工具能直观展示 MDX 编译器如何将 Markdown 转换为 React，对于问题排查非常有用。

**设置选项**：选择正确的格式（MDX 或 CommonMark）以及 Docusaurus 使用的以下插件：`remark-gfm`、`remark-directive`、`rehype-raw`。

:::

## MDX 与 CommonMark 对比 {#mdx-vs-commonmark}

Docusaurus 使用 MDX 编译器将 `.md` 和 `.mdx` 文件都编译为 React 组件，但**语法解析方式会因配置不同而存在差异**。

MDX 编译器支持[两种格式](https://mdxjs.com/packages/mdx/#optionsformat)：

- [MDX 格式](https://mdxjs.com/docs/what-is-mdx/)：支持 JSX 语法的强大解析器
- [CommonMark 格式](https://commonmark.org/)：符合标准的 Markdown 解析器，不支持 JSX 语法

默认情况下，**Docusaurus v3 出于历史原因对所有文件（包括 `.md` 文件）使用 MDX 格式**。

可通过 [`siteConfig.markdown.format`](../../api/docusaurus.config.js.mdx#markdown) 配置或 `mdx.format: md` 前置元数据**切换至 CommonMark 格式**。

:::tip[如何使用 CommonMark]

如果计划使用 CommonMark，我们推荐 [`siteConfig.markdown.format: 'detect'`](../../api/docusaurus.config.js.mdx#markdown) 配置。系统会根据文件扩展名自动选择对应格式：

- `.md` 文件使用 CommonMark 格式
- `.mdx` 文件使用 MDX 格式

:::

:::danger[实验性 CommonMark 支持]

CommonMark 支持目前处于**实验阶段**，存在若干[使用限制](https://github.com/facebook/docusaurus/issues/9092)。

:::

## 标准功能 {#standard-features}

Markdown 是一种通过可读性强的语法编写格式化内容的标记语言。

```md
### My Doc Section

Hello world message with some **bold** text, some _italic_ text, and a [link](/)

![img alt](/img/docusaurus.png)
```

<BrowserWindow>

<h3>My Doc Section</h3>

Hello world message with some **bold** text, some _italic_ text and a [link](/)

![img alt](/img/docusaurus.png)

</BrowserWindow>

<details>

<summary>Markdown is declarative</summary>

Some may assume a 1-1 correlation between Markdown and HTML, e.g., `![Preview](/img/docusaurus.png)` will always become `<img src="/img/docusaurus.png" alt="Preview" />`, as-is. However, _that is not the case_.

The Markdown syntax `![message](url)` only declaratively tells Docusaurus that an image needs to be inserted here, but we may do other things like transforming a [file path to URL path](./markdown-features-assets.mdx#images), so the generated markup may differ from the output of other Markdown renderers, or a naïve hand-transcription to the equivalent JSX/HTML code.

In general, you should only assume the _semantics_ of the markup (` ``` ` fences become [code blocks](./markdown-features-code-blocks.mdx); `>` becomes [quotes](#quotes), etc.), but not the actual compiled output.

</details>

## 前置元数据 {#front-matter}

前置元数据用于为 Markdown 文件添加元信息。所有内容插件都有各自的前置元数据规范，通过前置元数据来增强从内容或其他配置推断出的默认元数据。

前置元数据位于文件顶部，由三个破折号 `---` 包裹。其内容遵循 [YAML](https://yaml.org/spec/1.2.2/) 格式解析。

```md
---
title: My Doc Title
more_data:
  - Can be provided
  - as: objects
    or: arrays
---
```

:::info

各官方插件的 API 文档列出了支持的属性：

- [文档前置元数据](../../api/plugins/plugin-content-docs.mdx#markdown-front-matter)
- [博客前置元数据](../../api/plugins/plugin-content-blog.mdx#markdown-front-matter)
- [页面前置元数据](../../api/plugins/plugin-content-pages.mdx#markdown-front-matter)

:::

:::tip[增强您的前置元数据]

使用 [Markdown 配置中的 `parseFrontMatter` 函数](../../api/docusaurus.config.js.mdx#markdown) 可提供自定义的前置元数据解析器，或增强默认解析器。

您可以复用默认解析器，并用专有逻辑进行封装。这样就能实现便捷的前置元数据转换、快捷操作，或通过 Docusaurus 插件不支持的前置元数据与外部系统集成。

```js title="docusaurus.config.js"
export default {
  markdown: {
    // highlight-start
    parseFrontMatter: async (params) => {
      // 复用默认解析器
      const result = await params.defaultParseFrontMatter(params);

      // 处理前置元数据描述占位符
      result.frontMatter.description =
        result.frontMatter.description?.replaceAll('{{MY_VAR}}', 'MY_VALUE');

      // 创建自定义快捷操作
      if (result.frontMatter.i_do_not_want_docs_pagination) {
        result.frontMatter.pagination_prev = null;
        result.frontMatter.pagination_next = null;
      }

      // 重命名来自其他系统的非标准前置元数据
      if (result.frontMatter.cms_seo_summary) {
        result.frontMatter.description = result.frontMatter.cms_seo_summary;
        delete result.frontMatter.cms_seo_summary;
      }

      return result;
    },
    // highlight-end
  },
};
```

:::

## 引用块 {#quotes}

Markdown 引用块具有精美的样式：

```md
> Easy to maintain open source documentation websites.
>
> — Docusaurus
```

<BrowserWindow>

> Easy to maintain open source documentation websites.
>
> — Docusaurus

</BrowserWindow>

## 折叠区块 {#details}

Markdown 可以嵌入 HTML 元素，其中 [`details`](https://developer.mozilla.org/en-US/docs/Web/HTML/Element/details) 折叠区块元素会被优雅地渲染：

````md
### Details element example

<details>
  <summary>Toggle me!</summary>

  This is the detailed content

  ```js
  console.log("Markdown features including the code block are available");
  ```

  You can use Markdown here including **bold** and _italic_ text, and [inline link](https://docusaurus.io)
  <details>
    <summary>Nested toggle! Some surprise inside...</summary>

    😲😲😲😲😲
  </details>
</details>
````

<BrowserWindow>

<h3>Details element example</h3>

<details>
  <summary>Toggle me!</summary>

  This is the detailed content

  ```js
  console.log("Markdown features including the code block are available");
  ```

  You can use Markdown here including **bold** and _italic_ text, and [inline link](https://docusaurus.io)
  <details>
    <summary>Nested toggle! Some surprise inside...</summary>

    😲😲😲😲😲
  </details>
</details>

</BrowserWindow>

:::info

建议将 `<summary>` 标签内容保持为单行。请注意 [MDX 会为换行符生成额外的 HTML `<p>` 段落](https://mdxjs.com/migrating/v2/#jsx)。如有疑问，可使用 [MDX 在线调试工具](https://mdxjs.com/playground/) 排查 `<details>` 的渲染问题。

:::